[tool.poetry]
name = "pb_finam"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
pydantic = "^1.8.2"
loguru = "^0.5.3"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
alembic = "^1.7.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
